<resources>
    <string name="app_name">NexWork</string>

    <!-- loading -->
    <string name="text_cargando">Cargando</string>

    <!-- bottom nav -->
    <string name="btn_home">Inicio</string>
    <string name="btn_category">Categorías</string>
    <string name="btn_messages">Mensajes</string>
    <string name="btn_profile">Perfil</string>
    <string name="btn_notifications">Notificaciones</string>

    <!-- bottom nav admin -->
    <string name="btn_users_menu_str">Usuarios</string>
    <string name="btn_services_menu_str">Servicios</string>
    <string name="btn_petitions_menu_str">Solicitudes</string>
    <string name="btn_config_menu_str">Configuracion</string>

    <!-- welcome page -->
    <string name="welcome_title">Bienvenido</string>
    <string name="welcome_subtitle">Encuentre los mejores servicios u ofrezca su experiencia a los clientes. Si aún no tiene una cuenta, registrese seleccionado un modo.</string>
    <string name="action_client">Encuentra un servicio</string>
    <string name="action_provider">Venta de servicios</string>
    <string name="action_login">Iniciar Sesión</string>
    <string name="action_login_google">Continuar con Google</string>

    <!-- login page -->
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="no_account">¿No tienes cuenta?</string>
    <string name="action_register">Regístrate</string>
    <string name="action_skip">Skip</string>

    <!-- register page -->
    <string name="create_account_title">Crear Cuenta</string>
    <string name="hint_first_name">Nombre</string>
    <string name="hint_last_name">Apellido</string>
    <string name="hint_birth_date">Fecha de nacimiento</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_profession">Profesión</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="checkbox_accept_terms">Acepto términos y condiciones.</string>
    <string name="register_button">Registrarse</string>
    <string name="text_already_have_account">¿Ya tienes cuenta?</string>

    <!-- forgot password page -->
    <string name="forgot_password_title">Recuperar Contraseña</string>
    <string name="forgot_password_subtitle">Por Favor, escriba su correo electrónico. Recibirá un enlace para crear una nueva contraseña por correo electrónico.</string>
    <string name="action_send">Enviar</string>

    <!-- My Services -->
    <string name="my_services_title">Mis Servicios</string>
    <string name="add_new_service_button">Agregar Nuevo Servicio</string>

    <!-- My Favorites -->
    <string name="my_favorites_title">Mis Favoritos</string>

    <!-- Home's page -->
    <string name="home_provider_title">Panel de Proveedor</string>
    <string name="text_manage_availability">Gestionar disponibilidad</string>
    <string name="text_view_reviews">Ver reseñas</string>
    <string name="btn_see_my_service">Ver mis servicios</string>
    <string name="text_categories_popular">Categorias populares</string>

    <!-- Create service page -->
    <string name="create_service_title">Crear Servicio</string>
    <string name="update_service_title">Actualizar Servicio</string>
    <string name="create_service_subtitlen">Agrega hasta tres ofertas diferentes para tu servicio. Cada oferta debe incluir un título, descripción, precio y opciones de personalización.</string>
    <string name="offer_tab_simple">Sencillo</string>
    <string name="offer_tab_basic">Básico</string>
    <string name="offer_tab_premium">Premium</string>
    <string name="text_user_name">Nombre de usuario</string>
    <string name="text_offer_title">Título de la oferta</string>
    <string name="hint_offer_title">Ej. Paquete sencillo incluye...</string>
    <string name="text_category">Categoría</string>
    <string name="hint_category">Ej. Diseño de...</string>
    <string name="text_requires_visit">¿El servicio requiere visita a domicilio?</string>
    <string name="text_offer_description">Descripción de la oferta</string>
    <string name="text_upload_images">Subir imágenes</string>
    <string name="condition_upload_image">Máximo 3 fotos - Tamaño máximo 5MB</string>
    <string name="text_offer_price">Precio de la oferta</string>
    <string name="hint_offer_price">Ej. $50.000</string>
    <string name="add_ons_title">Complementos de la oferta</string>
    <string name="text_add_on_name">Nombre del complemento</string>
    <string name="hint_add_on_name">Ej. Duración</string>
    <string name="text_add_on_description">Descripción del complemento</string>
    <string name="hint_add_on_description">Ej. 3 Horas</string>
    <string name="btn_add_another_addon">Agregar otro complemento</string>
    <string name="btn_create_service">Agregar Servicio</string>
    <string name="opt_yes">Sí</string>
    <string name="opt_no">No</string>
    <string name="txt_delete_service">Eliminar Servicio</string>
    <string name="txt_delete_service_quest">¿Estás seguro de que deseas eliminar este servicio?</string>
    <string name="service_deleted">Servicio eliminado</string>

    <!-- Categories -->
    <string name="categories_title">Categorías</string>
    <string name="category_id_format">ID: %s</string>
    <string name="text_interest">Intereses</string>
    <string name="txt_improve_skills">Mejorar habilidades</string>
    <string name="txt_create_content">Crear contenido</string>

    <!-- Create category page -->
    <string name="create_category_title">Crear Categoría</string>
    <string name="create_category_subtitlen">Agrega la categoría con nombre e imagen referente.</string>
    <string name="text_category_title">Título de la categoría</string>
    <string name="text_upload_image_category">Subir imagen</string>
    <string name="btn_create_category">Agregar Categoría</string>

    <!-- Service History -->
    <string name="service_history_title">Historial de Servicios</string>
    <string name="client_format">Cliente: %s</string>
    <string name="provider_format">Proveedor: %s</string>
    <string name="date_format">Fecha: %s</string>
    <string name="status_format">Estado: %s</string>
    <string name="status_pending">Pendiente</string>
    <string name="status_completed">Completado</string>
    <string name="status_cancelled">Cancelado</string>

    <!-- Profile page -->
    <string name="profile_title">Perfil</string>
    <string name="section_title_config">Configuración</string>
    <string name="section_title_tools">Herramientas</string>
    <string name="text_manage_orders">Administrar pedidos</string>
    <string name="text_saved_list">Lista de guardados</string>
    <string name="text_provider_panel">Panel de proveedor</string>
    <string name="text_invite_friends">Invitar a amigos</string>
    <string name="text_manage_users">Administrar usuarios</string>
    <string name="text_manage_services">Administrar servicios</string>
    <string name="text_manage_categories">Administrar categorias</string>
    <string name="text_preferences">Preferencias</string>
    <string name="text_account">Cuenta</string>
    <string name="text_support">Soporte</string>
    <string name="text_community">Comunidad y legal</string>
    <string name="version_app">V 0.1</string>

    <!-- Guest Profile page -->
    <string name="guest_welcome_message">Parece que no has iniciado sesión.</string>
    <string name="guest_invitation_subtitle">Por favor, regístrate o inicia sesión para acceder a tu perfil.</string>

    <!-- Account page -->
    <string name="account_title">Cuenta</string>
    <string name="section_title_personal_information">Información Personal</string>
    <string name="section_title_account_management">Gestión de Cuenta y Privacidad</string>
    <string name="text_change_password">Cambiar contraseña</string>
    <string name="text_delete_account">Desactivar y eliminar cuenta</string>
    <string name="text_privacy_policy">Política de privacidad</string>
    <string name="text_close_session">Cerrar sesión</string>
    <string name="text_bank_account">Cuenta bancaria</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_change_client">Cambiar a cliente</string>
    <string name="btn_change_provider">Cambiar a proveedor</string>
    <string name="btn_change_photo">Cambiar Foto</string>
    <string name="btn_delete_photo">Eliminar Foto</string>

    <!-- Change password page -->
    <string name="change_password_title">Cambiar Contraseña</string>
    <string name="change_password_subtitle">Por favor, ingrese su contraseña actual y cree una nueva.</string>
    <string name="hint_current_password">Contraseña actual</string>
    <string name="hint_new_password">Nueva contraseña</string>
    <string name="hint_confirm_new_password">Confirmar nueva contraseña</string>

    <!-- Delete account page -->
    <string name="delete_account_title">Eliminar Cuenta</string>
    <string name="delete_account_subtitle">¿Seguro desea eliminar su cuenta? Esta acción no se puede revertir. Ingrese su contraseña actual.</string>
    <string name="btn_delete_account">Eliminar cuenta</string>

    <!-- User CRUD -->
    <string name="edit_button">Editar</string>
    <string name="delete_button">Borrar</string>
    <string name="user_profile_image_desc">Imagen de perfil del usuario</string>
    <string name="edit_user_option">Editar Usuario</string>
    <string name="view_details_option">Ver Detalles</string>
    <string name="delete_user_option">Eliminar Usuario</string>
    <string name="cancel_option">Cancelar</string>
    <string name="add_user_str">Agregar usuario</string>
    <string name="create_user_str">Crear usuario</string>
    <string name="hint_search">Buscar…</string>

    <!-- Generic Options -->
    <string name="edit_option">Editar</string>
    <string name="delete_option">Eliminar</string>
    <string name="btn_see">Ver</string>

    <!-- service search -->
    <string name="btn_price">Precio</string>
    <string name="btn_availability">Disponibilidad</string>
    <string name="btn_location">Ubicación</string>

    <!-- service detail page -->
    <string name="service_detail_title">Detalles del Servicio</string>
    <string name="section_faq_service">Preguntas frecuentes</string>
    <string name="section_similar_service">Servicios Similares</string>
    <string name="btn_send_message_provider">Enviar Mensaje al Proveedor</string>
    <string name="btn_continue_service">Continuar</string>

    <!-- User Roles -->
    <string-array name="user_roles">
        <item>admin</item>
        <item>client</item>
        <item>provider</item>
    </string-array>

    <!-- Confirm Order page -->
    <string name="confirm_order_title">Confirmar Servicio</string>
    <string name="txt_order_details">Detalles del Servicio</string>
    <string name="service_format">Servicio: %s</string>
    <string name="plan_format">Plan %s</string>
    <string name="txt_date">Fecha</string>
    <string name="txt_hour">Hora</string>
    <string name="txt_addons">Complementos</string>
    <string name="txt_payment">Método de pago</string>
    <string name="txt_credit_card">Tarjeta de crédito</string>
    <string name="txt_other">Otro</string>

    <!-- Chats pages -->
    <string name="inbox_title">Bandeja de entrada</string>
    <string name="txt_send_message">Escribe un mensaje</string>
    <string name="txt_recents_chats">Recientes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>