<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_add_on_name"
        android:textColor="@color/text_primary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_addon_name_dynamic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_add_on_name"
        android:background="@drawable/edittext_background"
        android:inputType="textCapSentences"
        android:padding="12dp"
        android:paddingStart="25dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_add_on_description"
        android:textColor="@color/text_primary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_addon_description_dynamic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_add_on_description"
        android:background="@drawable/edittext_background"
        android:inputType="textCapSentences"
        android:padding="12dp"
        android:paddingStart="25dp"
        android:layout_marginBottom="8dp" />

</LinearLayout>