<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnEditUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_user_option"
        android:backgroundTint="@color/button_primary_background"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnViewDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_details_option"
        android:backgroundTint="@color/button_primary_background"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnDeleteUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_user_option"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/error"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_option"
        android:backgroundTint="@color/button_primary_background"
        />

</LinearLayout>