<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    android:fillViewport="true"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="100dp" >

            <ImageView
                android:id="@+id/Logotipo"
                android:layout_width="390dp"
                android:layout_height="50dp"
                android:src="@drawable/logotipo_nexwork" />

            <EditText
                android:id="@+id/hint_email"
                android:layout_width="350dp"
                android:layout_height="65dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/edittext_background"
                android:text="@string/hint_email"
                android:textColor="@color/text_secondary"
                android:textColorHint="@color/text_primary"
                android:textSize="18sp"
                android:padding="12dp"/>

            <EditText
                android:id="@+id/hintPassword"
                android:layout_width="350dp"
                android:layout_height="65dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_background"
                android:text="@string/hint_password"
                android:textColor="@color/text_secondary"
                android:textColorHint="@color/text_primary"
                android:textSize="18sp"
                android:padding="12dp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/success"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="350dp"
                android:layout_height="65dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-black"
                app:backgroundTint="@color/button_primary_background"
                android:text="@string/login_button"
                android:textColor="@color/text_primary"
                android:textAlignment="center"
                android:textSize="18sp"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/txt_no_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/no_account"
                android:textColor="@color/text_secondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_action_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/action_register"
                android:textColor="@color/success"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/action_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/action_skip"
                android:textColor="@color/accent"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>