<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".ui.profile.account.ChangePasswordFragment">

    <include
        android:id="@+id/header"
        layout="@layout/basic_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/forgot_password_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/change_password_subtitle"
                android:textColor="@color/text_primary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/current_password"
                android:layout_width="350dp"
                android:layout_height="65dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/hint_current_password"
                android:padding="12dp"
                android:paddingStart="25dp"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_secondary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/new_password"
                android:layout_width="350dp"
                android:layout_height="65dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/hint_new_password"
                android:padding="12dp"
                android:paddingStart="25dp"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_secondary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/confirm_new_password"
                android:layout_width="350dp"
                android:layout_height="65dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/hint_confirm_new_password"
                android:padding="12dp"
                android:paddingStart="25dp"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_secondary"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="350dp"
                android:layout_height="65dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/action_send"
                android:textAlignment="center"
                android:textColor="@color/text_primary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/button_primary_background" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>